# buddy-agent

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_MATRIX.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  memory.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  secret-scan.yml
assets/references/: REFERENCE_IMAGES.md
docs/: ARCHITECTURE.md  BUDDY_ACTION_ADAPTER.md  BUDDY_APPEARANCE_SPEC.md  BUDDY_FEATURE_PARITY.md  BUDDY_GAME_STUDIO.md  BUDDY_LIL_BUDDY_RUNTIME.md  BUDDY_MCP_SERVER.md  BUDDY_PRODUCT_SPINE.md  BUDDY_TRAINING_AGENTCRAFT.md  CLI.md  CONTROL_PLANE_OBSERVABILITY.md  CONTROL_PLANE_RUNTIME_ADAPTER.md  ECOSYSTEM_INTEGRATION_MAP.md  ECOSYSTEM_LICENSE_AUDIT.md  HERMES_PROVENANCE.md  IBE_MORE_COMPANION_SPEC.md  IMPORT_PLAN.md  KNOWLEDGE_VAULT_NATIVE_EMITTER.md  LICENSE_MATRIX.md  PRIORITY_INTEGRATIONS_STATUS.md  PUBLIC_RELEASE_CHECKLIST.md  SAFETY_MODEL.md  SKILL_POLICY.md  TEST_TONIGHT.md  model-runtime-parity.md
examples/symphony/: WORKFLOW.md  issues.json
schemas/: buddy-result-envelope.schema.json  buddy-task-envelope.schema.json
scripts/: check_rebrand.py  sync_reference_repos.py
skills/: HERMES_BUDDY_NATIVE_SKILLS_V3.md
skills/experimental/: README.md
skills/private/: README.md.example
src/buddy_agent/: __init__.py  adapters.py  alpha.py  cli.py  cli_product_spine.py  cli_workspace.py  (+12 more)
tests/: test_action_loop.py  test_adapters.py  test_agentcraft_bridge.py  test_alpha_runtime.py  test_alpha_runtime_plus.py  test_app_bridge_mobile.py  test_automation_registry.py  test_buddy_appearance.py  test_buddy_models.py  test_buddy_template_contract.py  test_buddy_training.py  test_cli.py  test_cli_smoke.py  test_companion_permissions.py  test_config.py  test_control_plane_runtime_adapter.py  test_doctor.py  test_ecosystem.py  test_game_studio.py  test_gateway_contracts.py  test_integrations.py  test_local_adapters.py  test_note_index.py  test_omni_config.py  test_orchestration.py  test_parity.py  test_persistent_memory.py  test_product_spine.py  test_providers.py  test_public_skills.py  test_readme_quickstart.py  test_receipts.py  test_reference_sync_script.py  test_references.py  test_runtime.py  test_runtime_config.py  test_sandbox_policy.py  test_skill_manifest.py  test_skill_policy.py  test_skills.py  (+1 more)
(+89 files in other folders)
