[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-agent"
version = "0.1.0"
description = "Buddy-branded agent runtime scaffold for Prismtek."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Cody Sumpter" }]
license = { file = "LICENSE" }
keywords = ["agent", "buddy", "prismtek", "runtime", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
  "mypy>=1.10,<2.0",
]
mythos = [
  "torch>=2.3",
]

[project.scripts]
buddy = "buddy_agent.cli:main"
buddy-workspace = "buddy_agent.cli_workspace:main"
buddy-product-spine = "buddy_agent.cli_product_spine:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/buddy_agent/control_plane/*.py" = ["ALL"]
"tests/test_control_plane_runtime_adapter.py" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["buddy_agent"]
